--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -134,7 +134,7 @@
 				За 1 день <span id="ExcursionToZaporozhye">экскурсии из <span id="Zaporozhye">Запорожья</span></span>
 				с нами ВЫ получите заряд здоровья и отличного настроения,
                                 забудете Ваши печали и заботы, проведете время <span id="travels">путешествуя</span>
-				с близкими! Безопасно, комфортно, весело <span id="tourism">в туризме</span>! <!--&#128518;-->
+				с близкими! Безопасно, комфортно, весело <span id="tourism">в туризме</span>! 
 				<img src="/images/Emoji/1f604.png" alt="smile" height="20px">
                         </p>
 			<div id="MoreDetails" style="display: none;">
@@ -142,8 +142,13 @@
 				35 дней в клетке со львами, 16 лет Реабилитационного Центра,
 				беcчисленное количество спасенных жизней животных - 
 				Александр Пылышенко гордость нашего Запорожского края!
-				Едем в Зоопарк созданный его семьей, любоваться малышами львятками, енотиками <!--&#129437; -->	
-                                тиграми, <!--&#128005;-->львами, <!--&#129409;--> и другими воспитанниками! 
+				Едем в Зоопарк созданный его семьей, любоваться малышами львятками, енотиками 
+				   <img src="/images/Emoji/129437.png" alt="smile" height="20px">
+                                   тиграми
+				   <img src="/images/Emoji/128005.png" alt="smile" height="20px">
+				   львами
+				   <img src="/images/Emoji/129409.png" alt="smile" height="20px">
+				   и другими воспитанниками! 
 				Все кто едет с нами кроме оплаты входного билета в Центр Пылышенко
 				дарят дополнительные средства, а именно Новый поворот 50%
 				от поездки*(от прибыли ТА) передаст Центру Пылышенко на питание львам!
@@ -153,10 +158,12 @@
 				   <img src="/images/Emoji/128014.png" alt="smile" height="20px"> занимающих призовые места
 				   <img src="/images/Emoji/127942.png" alt="smile" height="20px">
 				на международных конкурсах. Покормить их бубликами и сеном.
-				 Покататься на лошадке и получить массу удовольствия! <!--&#128519;-->
+				 Покататься на лошадке и получить массу удовольствия! 
 				Ждем Вас, Ваших родных, близких и друзей на экскурсию! 
-				Собери компанию 10 человек, 11 едет бесплатно <!-- &#127881; &#127882;-->
+				Собери компанию 10 человек, 11 едет бесплатно 
 				<img src="/images/Emoji/1f606.png" alt="smile" height="20px">
+				<img src="/images/Emoji/127881.png" alt="smile" height="20px">
+				<img src="/images/Emoji/127882.png" alt="smile" height="20px">
                            </p>
 		        </div>
                         <p id="MoreDetailsHide" onclick="document.getElementById('MoreDetails').style.display='block'; document.getElementById('MoreDetailsHide').style.display='none'"
