--- a/page-lions-and-horses.html
+++ b/page-lions-and-horses.html
@@ -302,7 +302,15 @@
                                             Мы в Центре Пылышенко, слушаем удивительную историю создания 
 					    Зоопарка и знакомимся с животными: милыми мишками, смешными енотиками, 
 					    величественными тирами и конечно грациозными львами! Делаем самые красивые 
-					    фото на память. Посещаем уютное кафе  с хот - догами, картошкой фри, мороженным  и  кофе.
+					    фото на память. Посещаем уютное кафе  с хот - догами
+					    <img src="/images/Emoji/127789.png" alt="smile" height="20px">
+					    картошкой фри 
+					    <img src="/images/Emoji/127789.png" alt="smile" height="20px">
+						мороженным 
+					    <img src="/images/Emoji/127848.png" alt="smile" height="20px">
+						и  кофе
+					    <img src="/images/Emoji/9749.png" alt="smile" height="20px">
+						
 					    Кого же мы увидим: смешных енотиков, быструю носуху, красивейших тигров и львов,
 					    ведь в зоопарке они живут семьями, белого тигра, рысь, гепарда, дикую кошку,
 					    обезьянок, попугайчиков, огромных и добрых мясоедов, сластен мишек и еще много разных 
@@ -310,7 +318,7 @@
 					    Оставляем денежку от Нас на питание животным и продолжаем свой путь.
                                         </p>
                                         <p><strong>16:40 </strong>
-                                           Мы уже в Запорожье, довольные <!--&#128519;-->
+                                           Мы уже в Запорожье, довольные
 						<img src="/images/Emoji/1f607.png" alt="smile" height="20px">
 					   возвращаемся домой чтоб поделится впечатлениями 
 				  	   с друзьями и близкими (но еще лучше их взять с собой). 
