--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -378,7 +378,9 @@
 				        <h5>СУББОТА</h5>
                                         <p><strong>16:05</strong>
 						  Пересадка во Львове на поезд <u>№ 134 до станции Ясиня</u>.
-						  Билеты также покупаются самостоятельно. 
+						  Билеты 
+						  <img src="/images/Emoji/127915png" alt="smile" height="20px">
+						  также покупаются самостоятельно. 
 						  Прибытие в Ясиня в <b>22:24</b>.
 						  Там Вас уже будет ждать транспорт от вокзала до отеля на Драгобрате.
 						  Переезд в горы, заселение в отель, отдых.
