--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -383,7 +383,9 @@
 						  также покупаются самостоятельно. 
 						  Прибытие в Ясиня в <b>22:24</b>.
 						  Там Вас уже будет ждать транспорт от вокзала до отеля на Драгобрате.
-						  Переезд в горы, заселение в отель, отдых.
+						  Переезд в горы, заселение в отель
+						  <img src="/images/Emoji/127976" alt="smile" height="20px">
+						  отдых.
 						  
                                         </p>
 					<hr> 
@@ -435,15 +437,21 @@
 						расположенный в долине реки Прут. Здесь Вы посетите водопад
 						«Пробий» — один из самых полноводных, живописных и популярных водопадов Карпат.
 						Рядом находится большой сувенирный рынок. Также Вы увидите железнодорожный мост,
-						которому больше 100 лет, старинные деревянные церкви, ресторан «Гуцульщина»,
+						которому больше 100 лет, старинные деревянные церкви
+						<img src="/images/Emoji/9962.png" alt="smile" height="20px">
+						ресторан «Гуцульщина»,
 						построенный без единого гвоздя, «перевернутый» дом… После свободного времени
 						<i>(можно пообедать в одном из кафе)</i>,
 						переезжаем в Буковель — самый престижный и дорогой курорт Карпат. 
 						Здесь можно прокатиться на кресельном подъемнике, 
 						отдохнуть на обустроенном пляже самого большого искусственного озера в Украине. 
 						Вечером после ужина каждый день — тоже все к Вашим услугам: 
-						настольные игры, гитара, мангал   
-					    <img src="/images/Emoji/1f606.png" alt="smile" height="20px">
+						настольные игры
+						<img src="/images/Emoji/127922.png" alt="smile" height="20px">
+						гитара
+						<img src="/images/Emoji/127928.png" alt="smile" height="20px">
+						мангал   
+					    <img src="/images/Emoji/128293.png" alt="smile" height="20px">
                                         </p>
 					 <hr>  
 					    
