--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -463,8 +463,11 @@
 						Также в этой поездке Вы посетите Географический центр Европы,
 						Колыбу — Музей с уникальной коллекцией старинных предметов быта,
 						Форелевое хозяйство с возможностью купить живую форель для приготовления
-						на мангале вечером в отеле, и проедетесь по приграничной дороге 
-						всего в нескольких метрах от Румынии.
+						на мангале вечером в отеле, и проедетесь по приграничной
+						 <img src="/images/Emoji/unnamed.gif" alt="smile" height="20px">
+						дороге 
+						всего в нескольких метрах от Румынии
+						<img src="/images/Emoji/Bucharest_Flag.svg" alt="smile" height="20px">
 					    	
                                         </p>
 					<hr>  
