--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -437,8 +437,10 @@
 						расположенный в долине реки Прут. Здесь Вы посетите водопад
 						«Пробий» — один из самых полноводных, живописных и популярных водопадов Карпат.
 						Рядом находится большой сувенирный рынок. Также Вы увидите железнодорожный мост,
-						которому больше 100 лет, старинные деревянные церкви
+						которому больше 100 лет, старинные деревянные 
 						<img src="/images/Emoji/9962.png" alt="smile" height="20px">
+						церкви,
+						<img src="/images/Emoji/cafe.png" alt="smile" height="20px">
 						ресторан «Гуцульщина»,
 						построенный без единого гвоздя, «перевернутый» дом… После свободного времени
 						<i>(можно пообедать в одном из кафе)</i>,
