--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -438,10 +438,7 @@
 						«Пробий» — один из самых полноводных, живописных и популярных водопадов Карпат.
 						Рядом находится большой сувенирный рынок. Также Вы увидите железнодорожный мост,
 						которому больше 100 лет, старинные деревянные 
-						<img src="/images/Emoji/9962.png" alt="smile" height="20px">
-						церкви,
-						<img src="/images/Emoji/cafe.png" alt="smile" height="20px">
-						ресторан «Гуцульщина»,
+						церкви, ресторан «Гуцульщина»,
 						построенный без единого гвоздя, «перевернутый» дом… После свободного времени
 						<i>(можно пообедать в одном из кафе)</i>,
 						переезжаем в Буковель — самый престижный и дорогой курорт Карпат. 
