--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -379,12 +379,12 @@
                                         <p><strong>16:05</strong>
 						  Пересадка во Львове на поезд <u>№ 134 до станции Ясиня</u>.
 						  Билеты 
-						  <img src="/images/Emoji/127915png" alt="smile" height="20px">
+						  <img src="/images/Emoji/127915.png" alt="smile" height="20px">
 						  также покупаются самостоятельно. 
 						  Прибытие в Ясиня в <b>22:24</b>.
 						  Там Вас уже будет ждать транспорт от вокзала до отеля на Драгобрате.
 						  Переезд в горы, заселение в отель
-						  <img src="/images/Emoji/127976" alt="smile" height="20px">
+						  <img src="/images/Emoji/127976.png" alt="smile" height="20px">
 						  отдых.
 						  
                                         </p>
