--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -503,7 +503,9 @@
 					<h5>СУББОТА</h5>
                                         <p><strong>08:35</strong>
 						Утром приезжаем во Львов.
-						Вещи  — в камеру хранения, на трамвае доехать до центра города,
+						Вещи  — в камеру хранения, на трамвае 
+						<img src="/images/Emoji/128650.png" alt="smile" height="20px">
+						доехать до центра города,
 						прогуляться, перекусить в кафе и в зависимости от приобретенных
 						Вами обратных билетов,  садимся в поезд  — и едем домой
 					    	<img src="/images/Emoji/1f607.png" alt="smile" height="20px">
