--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -487,7 +487,10 @@
                                         <p><!--<strong>00:00 </strong>-->
 						 Свободный день, но это не означает, что будет скучно.
 						Можно гулять в лесу, собирать грибы и ягоды, 
-						ведь так интересно найти огромнейший гриб и приготовить его на костре.
+						ведь так интересно найти огромнейший гриб
+						<img src="/images/Emoji/127812.png" alt="smile" height="20px">
+						и приготовить его на костре
+						 <img src="/images/Emoji/128293.png" alt="smile" height="20px">
 						Сорвать горсть брусники или черники и, 
 						вымыв ее в родниковой воде, почувствовать ее свежесть.
 						Также по желанию группы можно — либо подняться на гору Близница (1883 метра), 
