--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -492,7 +492,9 @@
 						и приготовить его на костре
 						 <img src="/images/Emoji/128293.png" alt="smile" height="20px">
 						Сорвать горсть брусники или черники и, 
-						вымыв ее в родниковой воде, почувствовать ее свежесть.
+						вымыв ее в родниковой воде
+						<img src="/images/Emoji/128167.png" alt="smile" height="20px">
+						почувствовать ее свежесть.
 						Также по желанию группы можно — либо подняться на гору Близница (1883 метра), 
 						либо навесить небольшой «веревочный парк» и посоревноваться в преодолении 
 						туристической полосы препятствий. Поздно вечером <i>(в 24-00)</i> садимся в «вездеходы», 
