--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -603,7 +603,10 @@
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Обувь</h5>
+				      <h5 class="mb-1">
+					  Обувь
+					  <img src="/images/Emoji/128095.png" alt="smile" height="20px">
+				       </h5>
 				    </div>
 					<p class="mb-1">Кроссовки - 2 пары желательно, шлепанцы или тапочки <i>(сменная обувь)</i></p>
 				 </a>
@@ -619,7 +622,12 @@
 				    <div class="d-flex w-100 justify-content-between">
 				      <h5 class="mb-1">Устройства</h5>
 				    </div>
-                                    <p class="mb-1">Фотоаппарат, мобильный телефон, зарядные устройства</p>
+                                    <p class="mb-1">
+					    Фотоаппарат
+					    <img src="/images/Emoji/128247.png" alt="smile" height="20px">
+					     мобильный телефон
+					    <img src="/images/Emoji/128241.png" alt="smile" height="20px">
+					    зарядные устройства</p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
