--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -632,7 +632,10 @@
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Горячее питьё</h5>
+				         <h5 class="mb-1">
+					      Горячее питьё
+					      <img src="/images/Emoji/9749.png" alt="smile" height="20px">
+					 </h5>
 				    </div>
 					<p class="mb-1">Термос, заварка, кофе. Кипятком в отеле обеспечим — сэкономит Ваши средства,
 						там есть  кафе, но мы советуем не тратить лишнего <i>(чай, кофе в среднем стоит 15-25 грн)</i></p>
