--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -647,7 +647,13 @@
 				      <h5 class="mb-1">Легкий перекус</h5>
 				    </div>
 					<p class="mb-1">Так же не помешает взять из дома <i>(купить во Львове)</i>
-					легкий перекус <i>(шоколадки, печенье, колбаску)</i> — и хотя кормят в отеле плотно
+					легкий перекус <i>(шоколадки
+						<img src="/images/Emoji/127851.png" alt="smile" height="20px">
+						печенье
+						<img src="/images/Emoji/127850.png" alt="smile" height="20px">
+						колбаску
+						<img src="/images/Emoji/127789.png" alt="smile" height="20px">
+						)</i> — и хотя кормят в отеле плотно
 					— и завтрак и ужин <i>(первое, второе),</i> но в обед все же необходимо что-то перекусить, 
 					при этом можно пообедать и в кафе, кому как нравится</p>
 					
