--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -648,9 +648,9 @@
 				    </div>
 					<p class="mb-1">Так же не помешает взять из дома <i>(купить во Львове)</i>
 					легкий перекус <i>(шоколадки
-						<img src="/images/Emoji/127851.png" alt="smile" height="20px">
+						<img src="/images/Emoji/127851.png" alt="smile" height="20px">,
 						печенье
-						<img src="/images/Emoji/127850.png" alt="smile" height="20px">
+						<img src="/images/Emoji/127850.png" alt="smile" height="20px">,
 						колбаску
 						<img src="/images/Emoji/127789.png" alt="smile" height="20px">
 						)</i> — и хотя кормят в отеле плотно
