--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -624,9 +624,9 @@
 				    </div>
                                     <p class="mb-1">
 					    Фотоаппарат
-					    <img src="/images/Emoji/128247.png" alt="smile" height="20px">
+					    <img src="/images/Emoji/128247.png" alt="smile" height="20px">,
 					     мобильный телефон
-					    <img src="/images/Emoji/128241.png" alt="smile" height="20px">
+					    <img src="/images/Emoji/128241.png" alt="smile" height="20px">,
 					    зарядные устройства</p>
 				 </a>
 
