--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             Джарылгач - Украинские Мальдивы
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 24 - 25 Июля 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 24 - 25 Июля </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
@@ -387,7 +387,7 @@
                             Экскурсия львы и лошади...
                         </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа 2021 Года </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 07 Августа </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
