--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -76,9 +76,9 @@
             <h3 class="heading text-capitalize text-center">
                В блоге ответы на Ваши вопросы!
             </h3>
-            <h4 class="heading text-capitalize text-center">
+            <!--<h4 class="heading text-capitalize text-center">
                 Новости Украины и Запорожья. Туризм и путешествия. 
-            </h4>  
+            </h4>  -->
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             
             <!-- Блок Новости Запорожья -->
