--- a/booking.html
+++ b/booking.html
@@ -5,7 +5,8 @@
     <title>Забронировать | Новый поворот</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="keywords" content="Забронировать | Туры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
+    <meta name="keywords" content="Забронировать | Туры выходного дня 'Новый поворот', 
+                                   Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
     <meta name="description"
         content="Забронируйте Тур | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
