--- a/blog.html
+++ b/blog.html
@@ -7,11 +7,14 @@
 
     <title>Блог | Новый Поворот</title>
   
-    <meta name="description" content="Блог | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
-    
+    <meta name="description" content="Блог | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net |
+				      Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+    <meta name="keywords" content="Забронировать | Туры выходного дня 'Новый поворот', Экскурсии, 
+				   Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья" />
+	
     <!-- Open Graph data-->
-    <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Блог">
-    <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
+    <meta property="og:title" content="Блог | 'Новый поворот'">
+    <meta property="og:description" content="В блоге ответы на Ваши вопросы!"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://novipovorot.pp.ua/blog.html"/>
     <meta property="og:image" content="images/novi-povorot.jpg">
