--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,7 @@
             <!-- Блок Новости Запорожья -->
             <div class="row">
                 <div class="col-lg-9">
-                    <h3 class="section-title-left">Новости</h3>
+                    <h3 class="section-title-left">Советы Туристам</h3>
                     <div class="row">
                         
                         <div class="col-lg-5 col-md-6 item">
