--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,17 @@
     <div class="w3l-homeblock1 py-5">
         <div class="container pt-lg-5 pt-md-4">
             
+		<!-- Хлебные крошки -->
+              <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>		  
+                     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog.html">Блог</a></li>
+                  </ol>
+                </nav>
+               </div>
+              <!-- //Хлебные крошки -->
+		
             <h3 class="heading text-capitalize text-center">
                В блоге ответы на Ваши вопросы!
             </h3>
@@ -90,7 +101,7 @@
             </h4>  -->
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             
-            <!-- Блок Новости Запорожья -->
+            <!-- Советы Туристам -->
             <div class="row">
                 <div class="col-lg-9">
                     <h3 class="section-title-left">Советы Туристам</h3>
