--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,8 @@
      <!-- //google fonts -->
     
     <!-- Template CSS -->
-    <!--<link rel="stylesheet" href="./css/blog.css">-->
-    <link rel="stylesheet" href="./css/style-blog.css">
+    <link rel="stylesheet" href="./css/blog.css">
+    <!--<link rel="stylesheet" href="./css/style-blog.css">-->
    <!-- <link href="css/style.css" rel='stylesheet' type='text/css' /> custom css -->
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
