--- a/blog.html
+++ b/blog.html
@@ -154,18 +154,15 @@
                                         <img src="./images/9.jpg" alt="Помогите Изображению"
                                             class="img-fluid radius-image news-image"></a>
                                     <div class="blog-info align-self">
-                                        <a href="blog-page.html" class="blog-desc1">How to Create your blog domain to make
-                                            it live
+                                        <a href="blog-page.html" class="blog-desc1">
+						О выезде за границу граждан Украины
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
-                                            <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                            <a href="#author">Довгаль Юлия</a>
                                         </div>
                                         <ul class="blog-meta">
                                             <li class="meta-item blog-lesson">
-                                                <span class="meta-value"> April 13, 2020 </span>
-                                            </li>
-                                            <li class="meta-item blog-students">
-                                                <span class="meta-value"> 6min read</span>
+                                                <span class="meta-value"> Июль 23, 2021 </span>
                                             </li>
                                         </ul>
                                     </div>
