--- a/blog.html
+++ b/blog.html
@@ -130,18 +130,13 @@
                                     <p>Lorem ipsum dolor sit amet consectetur ipsum adipisicing elit. Qui eligendi
                                         vitae sit.</p>
                                     <div class="author align-items-center mt-3 mb-1">
-                                        <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                        <a href="#author">Johnson smith</a>
                                     </div>
                                     <ul class="blog-meta">
                                         <li class="meta-item blog-lesson">
                                             <span class="meta-value"> April 13, 2020 </span>
                                         </li>
-                                        <li class="meta-item blog-students">
-                                            <span class="meta-value"> 6min read</span>
-                                        </li>
                                     </ul>
-                                    <a href="#featuredposts" class="btn btn-style btn-outline mt-4">All featured
-                                        posts</a>
                                 </div>
                             </div>
                         </div>
@@ -176,15 +171,13 @@
                                             Website Host
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
-                                            <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                            <a href="#author">Johnson smith</a>
                                         </div>
                                         <ul class="blog-meta">
                                             <li class="meta-item blog-lesson">
                                                 <span class="meta-value"> April 13, 2020 </span>
                                             </li>
-                                            <li class="meta-item blog-students">
-                                                <span class="meta-value"> 6min read</span>
-                                            </li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
@@ -197,14 +190,11 @@
                                             with 3 simple steps
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
-                                            <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                            <a href="#author">Johnson smith</a>
                                         </div>
                                         <ul class="blog-meta">
                                             <li class="meta-item blog-lesson">
                                                 <span class="meta-value"> April 13, 2020 </span>
-                                            </li>
-                                            <li class="meta-item blog-students">
-                                                <span class="meta-value"> 6min read</span>
                                             </li>
                                         </ul>
                                     </div>
@@ -223,14 +213,11 @@
                             <a href="blog-page.html" class="blog-desc1"> How to Identify first blog post's topic
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
-                                <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                <a href="#author">Johnson smith</a>
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> April 13, 2020 </span>
-                                </li>
-                                <li class="meta-item blog-students">
-                                    <span class="meta-value"> 6min read</span>
                                 </li>
                             </ul>
                         </div>
@@ -241,14 +228,11 @@
                             <a href="#blog-single" class="blog-desc1"> 5 ways to fix a leaky faucet
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
-                                <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                <a href="#author">Johnson smith</a>
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> April 13, 2020 </span>
-                                </li>
-                                <li class="meta-item blog-students">
-                                    <span class="meta-value"> 6min read</span>
                                 </li>
                             </ul>
                         </div>
@@ -260,14 +244,11 @@
                             <a href="#blog-single" class="blog-desc1"> Changing the topic scope
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
-                                <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                <a href="#author">Johnson smith</a>
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> April 13, 2020 </span>
-                                </li>
-                                <li class="meta-item blog-students">
-                                    <span class="meta-value"> 6min read</span>
                                 </li>
                             </ul>
                         </div>
@@ -279,14 +260,11 @@
                             <a href="#blog-single" class="blog-desc1"> Write an intro (make it captivating).
                             </a>
                             <div class="author align-items-center mt-3 mb-1">
-                                <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                                <a href="#author">Johnson smith</a> 
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
                                     <span class="meta-value"> April 13, 2020 </span>
-                                </li>
-                                <li class="meta-item blog-students">
-                                    <span class="meta-value"> 6min read</span>
                                 </li>
                             </ul>
                         </div>
@@ -314,14 +292,11 @@
                             officia odio natus nemo. Ratione ipsa distinctio explicabo esse quod autem
                             veritatis, in fugit odio.</p>
                         <div class="author align-items-center mt-4 mb-1">
-                            <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
+                            <a href="#author">Johnson smith</a>
                         </div>
                         <ul class="blog-meta">
                             <li class="meta-item blog-lesson">
                                 <span class="meta-value"> April 13, 2020 </span>
-                            </li>
-                            <li class="meta-item blog-students">
-                                <span class="meta-value"> 6min read</span>
                             </li>
                         </ul>
                     </div>
