--- a/blog.html
+++ b/blog.html
@@ -278,7 +278,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <a href="#blog-single">
-                            <img class="card-img-bottom d-block radius-image" src="./images/p3.jpg"
+                            <img class="card-img-bottom d-block radius-image" src="./images/travel.jpg"
                                 alt="Помогите Изображению">
                         </a>
                     </div>
