--- a/blog.html
+++ b/blog.html
@@ -211,14 +211,15 @@
                     <div class="grids5-info">
                         <h4>01.</h4>
                         <div class="blog-info">
-                            <a href="blog-page.html" class="blog-desc1"> How to Identify first blog post's topic
+                            <a href="blog-page.html" class="blog-desc1"> 
+				    Рекомендации во время землетрясения
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
-                                <a href="#author">Johnson smith</a>
+                                <a href="#author">Довгаль Юлия</a>
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> April 13, 2020 </span>
+                                    <span class="meta-value">Июль 23, 2021 </span>
                                 </li>
                             </ul>
                         </div>
@@ -226,14 +227,15 @@
                     <div class="grids5-info">
                         <h4>02.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1"> 5 ways to fix a leaky faucet
+                            <a href="#blog-single" class="blog-desc1"> 
+				   Проблемы с паспортом  для выезда за границу в путешествии
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
-                                <a href="#author">Johnson smith</a>
+                                <a href="#author">Довгаль Юлия</a>
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> April 13, 2020 </span>
+                                    <span class="meta-value"> Июль 23, 2021  </span>
                                 </li>
                             </ul>
                         </div>
@@ -242,14 +244,15 @@
                     <div class="grids5-info">
                         <h4>03.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1"> Changing the topic scope
+                            <a href="#blog-single" class="blog-desc1"> 
+				    В путешествии задержали или арестовали
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
-                                <a href="#author">Johnson smith</a>
+                                <a href="#author">Довгаль Юлия</a>
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> April 13, 2020 </span>
+                                    <span class="meta-value"> Июль 23, 2021  </span>
                                 </li>
                             </ul>
                         </div>
@@ -258,14 +261,15 @@
                     <div class="grids5-info">
                         <h4>04.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1"> Write an intro (make it captivating).
+                            <a href="#blog-single" class="blog-desc1">
+				    Режим въезда в страны мира 
                             </a>
                             <div class="author align-items-center mt-3 mb-1">
-                                <a href="#author">Johnson smith</a> 
+                                <a href="#author">Довгаль Юлия</a> 
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> April 13, 2020 </span>
+                                    <span class="meta-value"> Июль 23, 2021  </span>
                                 </li>
                             </ul>
                         </div>
@@ -293,11 +297,11 @@
                             officia odio natus nemo. Ratione ipsa distinctio explicabo esse quod autem
                             veritatis, in fugit odio.</p>
                         <div class="author align-items-center mt-4 mb-1">
-                            <a href="#author">Johnson smith</a>
+                            <a href="#author">Довгаль Юлия</a>
                         </div>
                         <ul class="blog-meta">
                             <li class="meta-item blog-lesson">
-                                <span class="meta-value"> April 13, 2020 </span>
+                                <span class="meta-value"> Июль 23, 2021 </span>
                             </li>
                         </ul>
                     </div>
