--- a/blog.html
+++ b/blog.html
@@ -187,8 +187,8 @@
                                     <a href="blog-page.html" class="d-block zoom"><img src="./images/9.jpg" alt="Помогите Изображению"
                                             class="img-fluid radius-image news-image"></a>
                                     <div class="blog-info align-self">
-                                        <a href="blog-page.html" class="blog-desc1">Home to Customize your blog's theme
-                                            with 3 simple steps
+                                        <a href="blog-page.html" class="blog-desc1">
+						В связи с распространением в мире коронавируса COVID-19
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
                                             <a href="#author">Довгаль Юлия</a>
