--- a/blog.html
+++ b/blog.html
@@ -289,13 +289,17 @@
                     </div>
                     
                     <div class="col-lg-6 blog-details align-self mt-lg-0 mt-sm-5 mt-4">
-                        <a href="#blog-single" class="blog-desc-big">Your Blog Posts are Boring: 9 Tips for Making your
-                            Writing more Interesting
+                        <a href="#blog-single" class="blog-desc-big">
+				Хорошо там где мы есть 
                         </a>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos blanditiis, odit non asperiores
-                            possimus voluptas sit nihil nam id explicabo saepe sapiente excepturi similique, dicta
-                            officia odio natus nemo. Ratione ipsa distinctio explicabo esse quod autem
-                            veritatis, in fugit odio.</p>
+                        <p>
+			    Путешествуя на дикой природе в лесу, степи, пустынях, горах или пещерах -
+			    безопасность решается через физическую и техническую подготовку туриста.
+			    Пессимизм, уныние или отчаяние - враг для туризма и занимает свое место.
+			    Каждому туристу необходимо научиться элементарным приемам психологической 
+			     тренировки, и постоянно ими заниматься, что поможет сохранить себя и в
+				обычной повседневной городской жизни.
+			</p>
                         <div class="author align-items-center mt-4 mb-1">
                             <a href="#author">Довгаль Юлия</a>
                         </div>
