--- a/blog.html
+++ b/blog.html
@@ -314,9 +314,9 @@
                         <p>
 			    Путешествуя на дикой природе в лесу, степи, пустынях, горах или пещерах -
 			    безопасность решается через физическую и техническую подготовку туриста.
-			    Пессимизм, уныние или отчаяние - враг для туризма и занимает свое место.
-			    Каждому туристу необходимо научиться элементарным приемам психологической 
-			     тренировки, и постоянно ими заниматься, что поможет сохранить себя и в
+			    Пессимизм, уныние или отчаяние - враг для туризма.
+			    Каждому туристу необходимо научиться приемам психологической 
+			     тренировки, что поможет сохранить себя и в
 				обычной повседневной городской жизни.
 			</p>
                         <div class="author align-items-center mt-4 mb-1">
