--- a/blog.html
+++ b/blog.html
@@ -169,7 +169,7 @@
                                             class="img-fluid radius-image news-image"></a>
                                     <div class="blog-info align-self">
                                         <a href="blog-page.html" class="blog-desc1">
-						Медицинa в путешествии за рубежом 
+						Организация питания в путешествии
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
                                             <a href="#author">Довгаль Юлия</a>
