--- a/blog-page.html
+++ b/blog-page.html
@@ -32,7 +32,7 @@
      <!-- //google fonts -->
     
     <!-- Template CSS -->
-     <!--<link rel="stylesheet" href="./css/blog.css">-->
+     <!--<link rel="stylesheet" href="./css/blog-page.css">-->
     <link rel="stylesheet" href="/css/style-liberty.css">
     <link href="css/style.css" rel='stylesheet' type='text/css'> <!--custom css -->
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
