--- a/blog-page.html
+++ b/blog-page.html
@@ -79,7 +79,7 @@
             Making your Writing more Interesting</h3>
         <div class="blog-post-align">
             <div class="blog-post-img">
-                <a href="author.html"><img src="/images/author.jpg" alt="" class="rounded-circle img-fluid"></a>
+                <a href="author.html"><img src="/images/Dovgal_Yuliya.jpg" alt="Dovgal_Yuliya" class="rounded-circle img-fluid"></a>
             </div>
             <div class="blog-post-info">
                 <div class="author align-items-center mb-1">
